--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                                             </a> 
 													    </div>
                                                         <h4 class="pubtitle">Temporal integration and attentional selection of color and contrast target pairs in rapid serial visual presentation</h4>
-                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, &  Akyürek, E.G. </div>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong> &  Akyürek, E.G. </div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica, Volume 196, pp 56-69 (2019)</div>
                                                     </div>
                                                     <div class="pubdetails">
@@ -602,7 +602,7 @@ eventually enhances attention and integration.</p>
                                                             </a> 
 													    </div>
                                                         <h4 class="pubtitle">The acute effects of cocoa flavanols on temporal and spatial attention</h4>
-                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, Saija, J., Field, D. &  Akyürek, E.G. </div>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, Saija, J., Field, D., &  Akyürek, E.G. </div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Psychopharmacology, Volume 235, Issue 5, pp 1497–1511 (2018)</div>
                                                     </div>
                                                     <div class="pubdetails">
@@ -650,7 +650,7 @@ eventually enhances attention and integration.</p>
                                                         <h4 class="pubtitle">
                                                             Herkes icin istatistiksel programlama ve analiz (Introduction to R)
                                                         </h4>
-                                                        <div class="pubauthor">Richard Cotton, <i>translated to Turkish by</i> Sunbul, O., Sunbul, S.O., <strong>Karabay, A.</strong></div>
+                                                        <div class="pubauthor">Richard Cotton, <i>translated to Turkish by</i> Sünbül, Ö., Sünbül, S.Ö., & <strong>Karabay, A.</strong></div>
                                                         <div class="pubcite">
                                                             <span class="label label-primary">Book translation</span> Pegem Academy Press, Istanbul, Turkey, in press.
                                                         </div>
