--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ eventually enhances attention and integration.</p>
                                                     </div>
                                                 </div>
 										        <!--Book Chapter-->
-												<div class="item mix book" data-year="2018">
+												<div class="item mix book" data-year="2020">
                                                     <div class="pubmain">
                                                         <div class="pubassets">
                                                             
@@ -652,7 +652,7 @@ eventually enhances attention and integration.</p>
                                                         </h4>
                                                         <div class="pubauthor">Richard Cotton, <i>translated to Turkish by</i> Sünbül, Ö., Sünbül, S.Ö., & <strong>Karabay, A.</strong></div>
                                                         <div class="pubcite">
-                                                            <span class="label label-primary">Book translation</span> Pegem Academy Press, Istanbul, Turkey, in press.
+                                                            <span class="label label-primary">Book translation</span> Pegem Academy Press, Istanbul, Turkey (2020)
                                                         </div>
                                                         
                                                     </div>
