--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                                 <h3 class="">Aytaç Karabay</h3>
                                                 <ul class="list-unstyled">
                                                     <li>Cognitive Science</li>
-                                                    <li>University of Groningen</li>
+                                                    <li>Rijksuniversiteit Groningen</li>
                                                 </ul>
                                             </div> 
                                         </div>
@@ -209,11 +209,11 @@
                                             <li>
                                                 <div class="dates">
                                                     <span>Ph.D.</span>
-                                                    <span>2019</span>
+                                                    <span>2020</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>Cognitive Neuroscience</h4>
-                                                    <p><em>University of Groningen,</em> Groningen, the Netherlands</p>
+                                                    <p><em>Rijksuniversiteit Groningen,</em> Groningen, the Netherlands</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -247,12 +247,12 @@
                                         <ul class="ul-dates">
                                             <li>
                                                 <div class="dates">
-                                                    <span>Present</span>
+                                                    <span>2020</span>
                                                     <span>2015</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>PhD-Research</h4>
-                                                    <p><em>University of Groningen</em>, Departmant of Experimental Psychology</p>
+                                                    <p>Rijksuniversiteit Groningen</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -262,7 +262,7 @@
                                                 </div>
                                                 <div class="content">
                                                     <h4>Lab assistant</h4>
-                                                    <p><em>Animal vision lab, Brooklyn College</em>, City University of New York</p>
+                                                    <p><em>Animal vision lab, </em>Brooklyn College, CUNY</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -849,7 +849,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 													
 														<h4 class="pubtitle">Kanizsa Effects on Temporal Integration and Attention </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>&  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>Heymans symposium at the University of Groningen in Groningen, Netherlands. (2017)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>Heymans symposium at the Rijksuniversiteit Groningen in Groningen, Netherlands. (2017)</div>
 													</div>
 												</div>	
 												
