--- a/indexTR.html
+++ b/indexTR.html
@@ -157,7 +157,7 @@
                                                 <h3 class="">Aytaç Karabay</h3>
                                                 <ul class="list-unstyled">
                                                     <li>Bilişsel Psikoloji</li>
-                                                    <li>University of Groningen</li>
+                                                    <li>Rijksuniversiteit Groningen</li>
                                                 </ul>
                                             </div> 
                                          </div>
@@ -209,7 +209,7 @@
                                             <li>
                                                 <div class="dates">
                                                     <span>Ph.D.</span>
-                                                    <span>2019</span>
+                                                    <span>2020</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>Bilişsel Nörobilim</h4>
@@ -246,12 +246,12 @@
                                         <ul class="ul-dates">
                                             <li>
                                                 <div class="dates">
-                                                    <span>Şu an</span>
+                                                    <span>2020</span>
                                                     <span>2015</span>
                                                 </div>
                                                 <div class="content">
-                                                    <h4>Doktora adayı</h4>
-                                                    <p><em>University of Groningen</em>, Departmant of Experimental Psychology</p>
+                                                    <h4>Doktora</h4>
+                                                    <p>Rijksuniversiteit Groningen</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -261,7 +261,7 @@
                                                 </div>
                                                 <div class="content">
                                                     <h4>Labaratuvar Asistanı</h4>
-                                                    <p><em>Animal vision lab, Brooklyn College</em>, City University of New York</p>
+                                                    <p><em>Animal vision lab</em>, Brooklyn College, CUNY</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -738,7 +738,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 													
 														<h4 class="pubtitle">Kanizsa Effects on Temporal Integration and Attention </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>&  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>Heymans symposium at the University of Groningen in Groningen, Netherlands. (2017)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>Heymans symposium at the Rijksuniversiteit Groningen in Groningen, Netherlands. (2017)</div>
 													</div>
 												</div>	
 												
