--- a/indexTR.html
+++ b/indexTR.html
@@ -423,6 +423,46 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="pitems">
+											
+												<div class="item mix jpaper" data-year="2020">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="icon-expand-alt"></i>
+                                                            </a>
+                                                            <!-- <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
+                                                                <i class="icon-external-link"></i> 
+                                                            </a>
+                                                            <a href="/Files/articles/TemporalIntegrationAttentionalSelection.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="icon-cloud-download"></i>
+                                                            </a>-->
+															<a href="https://osf.io/2dp6e/" class="tooltips" title="Data" target="_blank">
+                                                                <i class="icon-bar-chart"></i>
+                                                            </a> 
+													    </div>
+                                                        <h4 class="pubtitle">Discriminating Global Orientation of Two Element Sets</h4>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong> &  Kurylo, D. D. </div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Cognition,(2020) [in press]</div>
+                                                    </div>
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p>Perceived global organization of visual patterns is based upon the aggregate contribution of constituent components. 
+														Patterns constructed from multiple sources cooperate or compete for global organization. An investigation was made here 
+														of interactions between two interspersed element sets on global orientation. It was hypothesized that each set would operate 
+														as an integrated unit, and contribute independently to global orientation. Participants viewed a 10 x 10 array of Gabor patches,
+														and indicated the predominant orientation of the array. In Experiment 1 8 all elements were rotated. Rotation up to 23° had little effect,
+														whereas greater rotation produced a progressive shift on global orientation. In Experiment 2 a proportion of elements remained aligned
+														while remaining elements were rotated. Embedding a proportion of aligned elements stabilized global orientation, which was dependent 
+														upon the proportion of aligned elements. Specifically, with 20% alignment, global orientation was similar to rotating all elements,
+														whereas 80% alignment strongly biased perception towards aligned elements. The stabilizing effect varied with rotation of the second 
+														element set. Across levels of rotation, alignment effects rose to a peak then declined as element sets became orthogonal. 
+														In Experiment 3, each element set was rotated independently. Independent rotation of both sets altered global orientation, 
+														compressing the psychometric function for the single-element condition. Together, for interspersed element sets with explicit orientations,
+														each set does not contribute independently to global orientation. Instead, element sets interact, where the contribution of one set, 
+														presented at a fixed rotation and fixed proportion, varies with the change to the second set.</p>
+                                                    </div>
+                                                </div>
+												
 											<!--Books in the format below-->
 												<div class="item mix book" data-year="2020">
                                                     <div class="pubmain">
