--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="/Files/articles/TemporalIntegrationAttentionalSelection.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="/Files/Tasks/VWM.osexp" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/2dp6e/" class="tooltips" title="Data" target="_blank">
