--- a/index.html
+++ b/index.html
@@ -1076,9 +1076,10 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                             <a href="/Files/Tasks/VWM.osexp" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
-															<a href="https://osf.io/2dp6e/" class="tooltips" title="Data" target="_blank">
+														
+															<!--<a href="https://osf.io/2dp6e/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
-                                                            </a> 
+                                                            </a>-->
 													    </div>
 														<img alt="image" src="img/experiments/WM_task.gif" align="left" style="padding:0 20px 20px 0;" width=250>
 														    <h3><b>Visual Working Memory - <i>Orientation Reproduction Task</i></b></h3>
