--- a/indexTR.html
+++ b/indexTR.html
@@ -86,7 +86,7 @@
 							<li>
                               <a href="#experiments">
                                 <div class="icon icon-bullseye"></div>
-                                <div class="text">Experiments</div>
+                                <div class="text">Deneyler</div>
                               </a>
                             </li> 
                             <!--<li>
