--- a/indexTR.html
+++ b/indexTR.html
@@ -1112,7 +1112,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                         <div class="headercontent">
 							<div class="page-container">
 								<div class="section-container">
-									<h3 class="title">Experiments</h3>
+									<h3 class="title">Deneyler</h3>
 								</div>
 							
 							
