--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <li>
                               <a href="#experiments">
                                 <div class="icon icon-bullseye"></div>
-                                <div class="text">Experiments</div>
+                                <div class="text">Tasks</div>
                               </a>
                             </li> 
                             <!--<li>
@@ -1054,7 +1054,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                         <div class="headercontent">
 							<div class="page-container">
 								<div class="section-container">
-									<h3 class="title">Experiments</h3>
+									<h3 class="title">Tasks</h3>
 								</div>
 							
 							
