--- a/indexTR.html
+++ b/indexTR.html
@@ -86,7 +86,7 @@
 							<li>
                               <a href="#experiments">
                                 <div class="icon icon-bullseye"></div>
-                                <div class="text">Deneyler</div>
+                                <div class="text">Görevler</div>
                               </a>
                             </li> 
                             <!--<li>
@@ -1112,7 +1112,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                         <div class="headercontent">
 							<div class="page-container">
 								<div class="section-container">
-									<h3 class="title">Deneyler</h3>
+									<h3 class="title">Görevler</h3>
 								</div>
 							
 							
