--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 														<p></p>
 														<p></p>
 														<p></p>
-														<h5 class="pubtitle"><b>References</b></h5>
+														<h4><b>References</b></h4>
 														<p>
 														Altinok, A., Karabay, A., & Akyurek, E. G. (2020). Acute effects of cocoa flavanols on visual working memory: No evidence from two randomised, 
 														double-blind, baseline- and placebo-controlled, crossover trials. <i>[under review]</i>.</p> 
