--- a/indexTR.html
+++ b/indexTR.html
@@ -1123,7 +1123,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                         <div class="col-md-12">
                                             <div class="pitems">
 												
-											<!--Articles in the format below-->
+											<!--Tasks format below-->
 	
 												<div class="item mix jpaper" data-year="2020">
                                                     <div class="pubmain">
@@ -1168,7 +1168,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 														<p></p>
 														<p></p>
 														<p></p>
-														<h5 class="pubtitle"><b>Referanslar</b></h5>
+														<h4><b>Referanslar</b></h4>
 														<p>
 														Altinok, A., Karabay, A., & Akyurek, E. G. (2020). Acute effects of cocoa flavanols on visual working memory: No evidence from two randomised, 
 														double-blind, baseline- and placebo-controlled, crossover trials. <i>[under review]</i>.</p> 
