--- a/index.html
+++ b/index.html
@@ -441,19 +441,19 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <!-- <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://www.journalofcognition.org/articles/10.5334/joc.127/" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-                                                            <a href="/Files/articles/TemporalIntegrationAttentionalSelection.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="https://www.journalofcognition.org/articles/10.5334/joc.127/galley/358/download/" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
-                                                            </a>-->
+                                                            </a>
 															<a href="https://osf.io/2dp6e/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> 
 													    </div>
                                                         <h4 class="pubtitle">Discriminating Global Orientation of Two Element Sets</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong> &  Kurylo, D. D. </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Cognition,(2020) [in press]</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Cognition, Volume 3, pp 1-13 (2020)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
