--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                                 <i class="icon-bar-chart"></i>
                                                             </a>-->
 													    </div>
-														<img alt="image" src="img/experiments/Stroop_task.gif" align="left" style="padding:0 20px 20px 0;" width=250 height=230>
+														<img alt="image" src="img/experiments/Stroop_task.gif" align="left" style="padding:0 20px 20px 0;" width=250 height=210>
 														    <h3><b>Stroop Task</b></h3>
                                                             <p> Stroop effect is a well-known psychological effect/phenomenon that was discovered by John Ridley Stroop in 1935.
 															There are thousands of articles that use the Stroop task to answer their research question of interest. It is a 
@@ -1152,7 +1152,8 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                     <div class="pubdetails">
 														<h4><b>Task Details</b></h4> 
                                                         <p> Participants are asked to report ink colors of the color names as quickly as possible. Responses 
-														are	collected via keyboard. There are four possible colors: Red, blue, green and yellow. For instance;
+														are	collected via keyboard.There are eight blocks and each block consist of 16 trials. 
+														There are four possible colors: Red, blue, green and yellow. For instance;
 														</p>
 														<p><b>Congruent Condition</b></p>
 														<p> <b style="color:red;"> RED </b>  ~ You need to press 'r' because the text color is red.</p>
