--- a/indexTR.html
+++ b/indexTR.html
@@ -1199,7 +1199,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                                 <i class="icon-bar-chart"></i>
                                                             </a>-->
 													    </div>
-														<img alt="image" src="img/experiments/Stroop_task_TR.gif" align="left" style="padding:0 20px 20px 0;" width=250 height=230>
+														<img alt="image" src="img/experiments/Stroop_task_TR.gif" align="left" style="padding:0 20px 20px 0;" width=250 height=210>
 														    <h3><b>Stroop Görevi</b></h3>
                                                             <p> Stroop efekti çok iyi araştırılmış ve John Ridley Stroop tarafından 1935 yılında bulunmuş bir fenomendir.
 															Bu fenomeni kullanarak binlerce araştırma sorusu cevaplanmıştır. Bu görev seçici dikkat kapasitesini ve 
@@ -1212,8 +1212,8 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                     
                                                     <div class="pubdetails">
 														<h4><b>Görev Details</b></h4> 
-                                                        <p> Katılımcılardan metinlerin rengini en kısa sürede klavye aracılığı ile raporlamaları istenir.  
-														Kırmızı, mavi, yeşil ve sarı olmak üzere dört renk kullanılmıştır. Örneğin:
+                                                        <p> Katılımcılardan metinlerin rengini en kısa sürede klavye aracılığı ile raporlamaları istenir. Bu deney sekiz bloktan
+														oluşmuştur ve her bir blokta 16 deneme mevcuttur. Kırmızı, mavi, yeşil ve sarı olmak üzere dört renk kullanılmıştır. Örneğin:
 														</p>
 														<p><b>Uyumlu Kondüsyon</b></p>
 														<p> <b style="color:red;"> KIRMIZI </b>  ~ Metin rengi kırmızı olduğu için 'k' tuşuna basınız.</p>
