--- a/indexTR.html
+++ b/indexTR.html
@@ -1140,7 +1140,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                             </a>-->
 													    </div>
 														<img alt="image" src="img/experiments/AB-integration.gif" align="left" style="padding:0 20px 20px 0;" width=250>
-														    <h3><b>Hibrid HSGS -<i>Zamansal Birleştirme & Dikkat Sekmesi Görevi</i></b></h3>
+														    <h3><b>Hibrit HSGS -<i>Zamansal Birleştirme & Dikkat Sekmesi Görevi</i></b></h3>
                                                             <p> Dikkat sekmesi (DS) ikinci hedefin ilk hedefi 200-500 ms arasında takip ettiği durumlarda, ikinci hedefin
 															tanımlanabilmesindeki güçlüğü gösteren bir fenomendir(Raymond, Shapiro, & Arnell, 1992). DS genellikle hızlı 
 															seri görsel sunum (HSGS) görevleri ile test edilir. Bu görevlerde bir ya da iki hedef vardır va katılımcıların
