New positions added

--- a/index.html
+++ b/index.html
@@ -251,13 +251,23 @@
                                             <h2>Academic Positions</h2>
                                         </div>
                                         <ul class="ul-dates">
+											<li>
+                                                <div class="dates">
+                                                    <span>2020</span>
+                                                    <span>2022</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Postdoctoral Researcher</h4>
+                                                    <p>Rijksuniversiteit Groningen</p>
+                                                </div>
+                                            </li>
                                             <li>
                                                 <div class="dates">
                                                     <span>2015</span>
                                                     <span>2020</span>
                                                 </div>
                                                 <div class="content">
-                                                    <h4>PhD-Research</h4>
+                                                    <h4>PhD</h4>
                                                     <p>Rijksuniversiteit Groningen</p>
                                                 </div>
                                             </li>
