--- a/indexTR.html
+++ b/indexTR.html
@@ -250,6 +250,16 @@
                                             <h2>Akademik Pozisyonlar</h2>
                                         </div>
                                         <ul class="ul-dates">
+											<li>
+                                                <div class="dates">
+                                                    <span>2020</span>
+                                                    <span>2022</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Doktora Sonrası Araştırmacı</h4>
+                                                    <p>Rijksuniversiteit Groningen</p>
+                                                </div>
+                                            </li>
                                             <li>
                                                 <div class="dates">
                                                     <span>2015</span>
