--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                                             </a> 
 													    </div>
                                                         <h4 class="pubtitle">Two faces of perceptual awareness during the attentional blink: Gradual and discrete</h4>
-                                                        <div class="pubauthor"><strong>Karabay, A.</strong> &  Kurylo, D. D. </div>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, Wilhelm, S. A., de Jonge, J., Wang, J., Martens, S., & Akyürek, E. G.  </div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Experimental Psychology: General. (in press)</div>
                                                     </div>
                                                     <div class="pubdetails">
@@ -499,8 +499,8 @@
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> 
 													    </div>
-                                                        <h4 class="pubtitle">Two faces of perceptual awareness during the attentional blink: Gradual and discrete</h4>
-                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, Wilhelm, S. A., de Jonge, J., Wang, J., Martens, S., & Akyürek, E. G.  </div>
+                                                        <h4 class="pubtitle">Discriminating Global Orientation of Two Element Sets</h4>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong> &  Kurylo, D. D. </div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Cognition, Volume 3, pp 1-13 (2020)</div>
                                                     </div>
                                                     <div class="pubdetails">
