--- a/indexTR.html
+++ b/indexTR.html
@@ -445,7 +445,7 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/769083v3" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://psycnet.apa.org/record/2022-05374-001" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
                                                             <a href="https://www.biorxiv.org/content/10.1101/769083v3.full.pdf" class="tooltips" title="Download" target="_blank">
