--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ eventually enhances attention and integration.</p>
                                                     </div>
 														<h4 class="pubtitle">The Attentional Blink: Binary Or Gradual?</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Wang, J., Martens, S., & Akyürek, E. G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -745,7 +745,7 @@ decreased precision.</p>
                                                     </div>
 														<h4 class="pubtitle">Decoding Sensory and Abstract Information From Activity Silent Brain States </h4>
                                                         <div class="pubauthor">Kandemir, G.,  <strong>Karabay, A.</strong>, & Akyürek, E. G.</div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -827,7 +827,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 													<div class="pubmain">
 														<h4 class="pubtitle">The Acute Effects of Cocoa Flavanols on Temporal and Spatial Attention </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Saija J., David F., &  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>winter conference 2017 of De Nederlandse Vereniging voor Psychonomie in Egmond, Netherlands. (2017)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>winter conference 2017 of De Nederlandse Vereniging voor Psychonomie in Egmond, Netherlands. (2017)</div>
 													</div>
 												</div>	
 												
