--- a/indexTR.html
+++ b/indexTR.html
@@ -713,7 +713,7 @@ eventually enhances attention and integration.</p>
                                                     </div>
 														<h4 class="pubtitle">The Attentional Blink: Binary Or Gradual?</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Wang, J., Martens, S., & Akyürek, E. G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -747,7 +747,7 @@ decreased precision.</p>
                                                     </div>
 														<h4 class="pubtitle">Decoding Sensory and Abstract Information From Activity Silent Brain States </h4>
                                                         <div class="pubauthor">Kandemir, G.,  <strong>Karabay, A.</strong>, & Akyürek, E. G.</div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>21st Conference of the European Society for Cognitive Psychology (ESCoP) in Tenerife, Spain. (2019)</div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -829,7 +829,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 													
 														<h4 class="pubtitle">The Acute Effects of Cocoa Flavanols on Temporal and Spatial Attention </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Saija J., David F., &  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>winter conference 2017 of De Nederlandse Vereniging voor Psychonomie in Egmond, Netherlands. (2017)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>winter conference 2017 of De Nederlandse Vereniging voor Psychonomie in Egmond, Netherlands. (2017)</div>
 													</div>
 												</div>	
 												
@@ -892,7 +892,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
 													</div>
 														<h4 class="pubtitle">Istemli & Istemsiz Otobiyografik Anilarda Yasa Bagli Degisimler (Variations of Voluntary and Involuntary Autobiographical Memories Depending on Age) </h4>
                                                         <div class="pubauthor">Er N.,<strong>Karabay, A.</strong>, Kaynar G., Uysal M. M., &  Boyraz F. U.</div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>17th National Psychology Congress in Istanbul, Turkey. (2012)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>17th National Psychology Congress in Istanbul, Turkey. (2012)</div>
                                                     </div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -919,7 +919,7 @@ that active updating of WM is affected by cocoa flavanols.</p>
                                                     </div>
 														<h4 class="pubtitle">Engellenme Karsisinda Verilen Tepkiler Ile Kisilik Tiplerinin Ve Yukleme Cesitlerinin Iliskisi (The Relationship between Frustration Responses, Personality Types and Attribution) </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>&  Cakmak, M.A.</div>
-                                                        <div class="pubcite"><span class="label label-warning">Oral Presentation</span>14. Ulusal Psikoloji Ogrencileri Kongresi (14th Conference of National Psychology Students) in Istanbul, Turkey. (2009)</div>    
+                                                        <div class="pubcite"><span class="label label-warning">Talk</span>14. Ulusal Psikoloji Ogrencileri Kongresi (14th Conference of National Psychology Students) in Istanbul, Turkey. (2009)</div>    
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
