--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> 
 													    </div>-->
-                                                        <h4 class="pubtitle">The Effects of Long-Term Intake of Cocoa Flavanols on Cognitive Functions and Mood, and the Physiological Mechanisms Underlying These Effects: A Literature Review</h4>
+                                                        <h4 class="pubtitle">The effects of long-term intake of cocoa flavanols on cognitive functions and mood, and the physiological mechanisms underlying these effects: A literature review</h4>
                                                         <div class="pubauthor">Karataş, O., <strong>Karabay, A.</strong>, & Alıcı, T.</div>
                                                         <div class="pubcite"><span class="label label-success">Review Paper</span> Turkish Psychological Articles. (in press)</div>
                                                     </div>
@@ -564,7 +564,7 @@
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> 
 													    </div>
-                                                        <h4 class="pubtitle">Discriminating Global Orientation of Two Element Sets</h4>
+                                                        <h4 class="pubtitle">Discriminating global orientation of two element sets</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong> &  Kurylo, D. D. </div>
                                                         <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Cognition, Volume 3, pp 1-13 (2020)</div>
                                                     </div>
