--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                                             <div class="pitems">
 												
 											<!--Articles in the format below-->
-												<div class="item mix jpaper" data-year="2022">
+												<div class="item mix jpaper" data-year="2021">
                                                     <div class="pubmain">
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
@@ -462,7 +462,7 @@
 													    </div>
                                                         <h4 class="pubtitle">Two faces of perceptual awareness during the attentional blink: Gradual and discrete</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Wilhelm, S. A., de Jonge, J., Wang, J., Martens, S., & Akyürek, E. G.  </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Experimental Psychology: General. (in press)</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Journal of Experimental Psychology: General. (2021)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
@@ -483,23 +483,17 @@
 												
 												<div class="item mix jpaper" data-year="2022">
                                                     <div class="pubmain">
-                                                        <!--<div class="pubassets">
+                                                        <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://psycnet.apa.org/record/2022-05374-001" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://link.springer.com/article/10.1007/s00394-021-02767-x" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i> 
                                                             </a>
-                                                            <a href="https://www.biorxiv.org/content/10.1101/769083v3.full.pdf" class="tooltips" title="Download" target="_blank">
-                                                                <i class="icon-cloud-download"></i>
-                                                            </a>
-															<a href="https://osf.io/x5dru/" class="tooltips" title="Data" target="_blank">
-                                                                <i class="icon-bar-chart"></i>
-                                                            </a> 
-													    </div>-->
+													    </div>
                                                         <h4 class="pubtitle">Acute effects of cocoa flavanols on visual working memory: Maintenance and updating</h4>
                                                         <div class="pubauthor">Altinok, A., <strong>Karabay, A.</strong>, & Akyürek, E. G.  </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> European Journal of Nutrition. (in press)</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> European Journal of Nutrition. (2022)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
