--- a/index.html
+++ b/index.html
@@ -296,7 +296,22 @@
                                             <h2>Honors, Awards and Grants</h2>
                                         </div>
                                         <ul class="timeline">
-                                                    
+											<li class="open">
+                                                <div class="date">2022</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Best poster presentation award, Working Memory Engram workshop</div>
+                                                    <div class="text row">
+                                                        <div class="col-md-2">
+                                                            <img alt="image" class="thumbnail img-responsive" src="img/personal/WM_engram_icon.png" >
+                                                        </div>
+                                                        <div class="col-md-10">
+                                                           Best poster presentation award at the Searching for the Working Memory Engram workshop held in University of Groningen, Groningen, Netherlands. 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>                                            
+											
                                             <li class="open">
                                                 <div class="date">2012-2019</div>
                                                 <div class="circle"></div>
