--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                                 <div class="date">2012-2019</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
-                                                    <div class="subject">Scholarship from the Ministry of Education, Turkey</div>
+                                                    <div class="subject">Scholarship from the Ministry of Education, Turkey (200.000$)</div>
                                                     <div class="text row">
                                                         <div class="col-md-2">
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
