--- a/indexTR.html
+++ b/indexTR.html
@@ -318,7 +318,7 @@
                                                 <div class="date">2012-2019</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
-                                                    <div class="subject">YLSY-MEB bursu</div>
+                                                    <div class="subject">YLSY-MEB bursu (200.000$)</div>
                                                     <div class="text row">
                                                         <div class="col-md-2">
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
